[package]
name = "ptp"
version = "0.5.0"
authors = ["Tim Ryan", "Ibiyemi Abiodun"]
edition = "2018"
description = "Picture Transfer Protocol driver"
keywords = ["camera", "usb"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/CUAir/rust-ptp"
repository = "https://github.com/CUAir/rust-ptp"

[dependencies]
libusb = "0.3"
byteorder = "1.3"
log = "0.4"
num-derive = "0.3"
num-traits = "0.2"
thiserror = "1.0"
