[package]
name = "ptp"
version = "0.8.0"
authors = ["Tim Ryan", "Ibiyemi Abiodun"]
edition = "2018"
description = "Picture Transfer Protocol driver"
keywords = ["camera", "usb"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/CUAir/rust-ptp"
repository = "https://github.com/CUAir/rust-ptp"

[dependencies]
rusb = "0.9"
byteorder = "1.4"
log = "0.4"
num-derive = "0.4"
num-traits = "0.2"
thiserror = "2.0"
serde = { version = "1.0", optional = true, features = ["derive"] }

[features]
default = ["serde"]
